--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Punto de Entrada</div>
+        <div>Punto de Entrada
+            <h1>asdad</h1>
+            <p>esto es un parrafo</p>
+        </div>
     </body>
 </html>
